package sport_shop;

public class CapManufacturer implements Manufacturer{

    @Override
    public String produced() {
        return "Smart caps";
    }

}
