package sport_shop;

public interface Item {

    String name();
    String color();
    Manufacturer producer();
    float price();

}
