package sport_shop;

public interface Manufacturer {

    String produced();

}
