package sport_shop;

public class ShirtManufacturer implements Manufacturer{

    @Override
    public String produced() {
        return "Active sports";
    }

}
