package sport_shop;

public class WhiteCap extends Cap{

    @Override
    public float price() {
        return 25.0f;
    }
    @Override
    public String name() {
        return "Cap";
    }
    @Override
    public String color() {
        return "White";
    }

}
